--- a/code/Dockerfile
+++ b/code/Dockerfile
@@ -5,10 +5,9 @@ RUN git clone https://github.com/MSDS698/2021-product-analytics-group-project-gr
 WORKDIR /2021-product-analytics-group-project-group_2_haoma
 
 RUN pip install --upgrade pip
-RUN git pull
 RUN pip install -r requirements.txt
 
-ARG FLASK_APP=code/app.py
+ENV FLASK_APP=code/app.py
 CMD flask run --host=0.0.0.0 --port=80
 
 EXPOSE 80
