--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,4 +23,4 @@ jobs:
         pip install numpy
     - name: Test with pytest
       run: |
-        pytest test_application.py
+        pytest code/test_application.py
