fix docker image

--- a/code/Dockerfile
+++ b/code/Dockerfile
@@ -1,5 +1,5 @@
-FROM python:3.7-alpine
-RUN apk add git
+FROM python:3.8-buster
+RUN apt install git
 
 RUN git clone https://github.com/MSDS698/2021-product-analytics-group-project-group_2_haoma.git /2021-product-analytics-group-project-group_2_haoma
 WORKDIR /2021-product-analytics-group-project-group_2_haoma
