--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 attrs==21.2.0
 blis==0.7.4
+boto3==1.17.91
+botocore==1.20.91
 catalogue==2.0.4
 certifi==2021.5.30
 chardet==4.0.0
@@ -12,6 +14,7 @@ idna==2.10
 iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
+jmespath==0.10.0
 kiwisolver==1.3.1
 MarkupSafe==2.0.1
 matplotlib==3.4.2
@@ -33,6 +36,7 @@ python-dateutil==2.8.1
 python-dotenv==0.17.1
 pytz==2021.1
 requests==2.25.1
+s3transfer==0.4.2
 six==1.16.0
 smart-open==3.0.0
 spacy==3.0.6
