--- a/code/Dockerfile
+++ b/code/Dockerfile
@@ -8,7 +8,7 @@ RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 ENV FLASK_APP=code/app.py
-COPY .env .
+ENV PYTHON_ENV=prod
 CMD flask run --host=0.0.0.0 --port=80
 
 EXPOSE 80
