--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,124 @@
-attrs==21.2.0
-awsebcli
+alabaster==0.7.12
+anaconda-client==1.7.2
+attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
+awsebcli==3.20.0
+Babel==2.9.1
+bcrypt==3.2.0
+beautifulsoup4==4.9.3
+blessed==1.18.0
 blis==0.7.4
-boto3==1.17.91
-botocore==1.20.91
-catalogue==2.0.4
+boto3==1.17.86
+botocore==1.20.86
+brotlipy==0.7.0
+cached-property==1.5.2
+catalogue==1.0.0
+cement==2.8.2
 certifi==2021.5.30
-chardet==4.0.0
+cffi @ file:///opt/concourse/worker/volumes/live/ca3c0fea-9d0f-4489-6889-89b42078ed37/volume/cffi_1613246931142/work
+chardet @ file:///opt/concourse/worker/volumes/live/9efbf151-b45b-463d-6340-a5c399bf00b7/volume/chardet_1607706825988/work
 click==7.1.2
+clyent==1.2.2
+colorama==0.4.3
+cryptography @ file:///opt/concourse/worker/volumes/live/cdf8ff17-b0bf-4081-524c-b5a0afe929ba/volume/cryptography_1616769280208/work
 cycler==0.10.0
 cymem==2.0.5
-Flask==1.1.2
-Flask-SQLAlchemy
+datatable==0.11.1
+docker==4.4.4
+docker-compose==1.25.5
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.16
+docx2txt==0.8
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
+Flask==2.0.1
+Flask-Login==0.5.0
+Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
-flask-login
-idna==2.10
-iniconfig==1.1.1
+future==0.16.0
+greenlet==1.1.0
+idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
+imagesize==1.2.0
+importlib-metadata @ file:///opt/concourse/worker/volumes/live/4e25a0be-45cc-4b73-4314-4604f00e30a4/volume/importlib-metadata_1617877365451/work
+ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
 itsdangerous==2.0.1
 Jinja2==3.0.1
 jmespath==0.10.0
+joblib==1.0.1
+jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
+jupyter-core @ file:///opt/concourse/worker/volumes/live/a699b83f-e941-4170-5136-bf87e3f37756/volume/jupyter_core_1612213304212/work
 kiwisolver==1.3.1
 MarkupSafe==2.0.1
 matplotlib==3.4.2
 murmurhash==1.0.5
+nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
+nltk==3.6.2
 numpy==1.20.3
 packaging==20.9
 pandas==1.2.4
+paramiko==2.7.2
+pathspec==0.5.9
 pathy==0.5.2
 pdf2image==1.15.1
+pdfminer.six==20201018
 Pillow==8.2.0
-pluggy==0.13.1
+plac==1.1.3
 preshed==3.0.5
-psycopg2
-py==1.10.0
+psycopg2==2.8.6
+pycodestyle==2.7.0
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pycryptodome==3.10.1
 pydantic==1.7.4
+pydata-sphinx-theme==0.6.3
+Pygments==2.9.0
+PyNaCl==1.4.0
+pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
 pyparsing==2.4.7
+pyresparser==1.0.6
+pyrsistent @ file:///opt/concourse/worker/volumes/live/656e0c1b-ef87-4251-4a51-1290b2351993/volume/pyrsistent_1600141745371/work
+PySocks @ file:///opt/concourse/worker/volumes/live/ef943889-94fc-4539-798d-461c60b77804/volume/pysocks_1605305801690/work
 pytesseract==0.3.7
-pytest==6.2.4
-python-dateutil==2.8.1
+python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
 python-dotenv==0.17.1
-pytz==2021.1
-requests==2.25.1
+pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
+PyYAML==5.4.1
+regex==2021.4.4
+requests @ file:///tmp/build/80754af9/requests_1608241421344/work
 s3transfer==0.4.2
-six==1.16.0
+scikit-learn==0.24.2
+scipy==1.6.3
+semantic-version==2.8.5
+six==1.14.0
+sklearn==0.0
 smart-open==3.0.0
-spacy==3.0.6
+snowballstemmer==2.1.0
+sortedcontainers==2.4.0
+soupsieve==2.2.1
+spacy==2.3.5
 spacy-legacy==3.0.5
-srsly==2.4.1
-thinc==8.0.3
-toml==0.10.2
-tqdm==4.61.0
+Sphinx==3.5.4
+sphinx-book-theme==0.1.0
+sphinx-rtd-theme==0.5.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-requirements==0.3.dev20201103
+sphinxcontrib-serializinghtml==1.1.5
+SQLAlchemy==1.4.18
+srsly==1.0.5
+termcolor==1.1.0
+texttable==1.6.3
+thinc==7.4.5
+threadpoolctl==2.1.0
+tqdm==4.61.1
+traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
 typer==0.3.2
-urllib3==1.26.5
+typing-extensions @ file:///home/ktietz/src/ci_mi/typing_extensions_1612808209620/work
+urllib3==1.25.11
 wasabi==0.8.2
+wcwidth==0.1.9
+websocket-client==0.59.0
 Werkzeug==2.0.1
 WTForms==2.3.3
+zipp @ file:///tmp/build/80754af9/zipp_1615904174917/work
