push requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,16 @@
 awsebcli==3.20.0
-boto3==1.17.86
-brotlipy==0.7.0
-datatable==0.11.1
-en-core-web-sm==2.3.1
+boto3==1.17.91
+en-core-web-sm==3.0.0
 flask-login==0.5.0
 flask-sqlalchemy==2.5.1
 flask-wtf==0.15.1
 matplotlib==3.4.2
+pandas==1.2.4
 paramiko==2.7.2
-pathy==0.5.2
 pdf2image==1.15.1
 pip-chill==1.0.1
 psycopg2==2.8.6
-pycodestyle==2.7.0
-pydantic==1.7.4
-pyopenssl==20.0.1
-pyresparser==1.0.6
-pysocks==1.7.1
 pytesseract==0.3.7
+pytest==6.2.4
 python-dotenv==0.17.1
 sklearn==0.0
-spacy-legacy==3.0.5
-sphinx-book-theme==0.1.0
-sphinx-rtd-theme==0.5.2
-sphinxcontrib-requirements==0.3.dev20201103
