--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 awsebcli==3.20.0
 boto3==1.17.91
-en-core-web-sm==3.0.0
 flask-login==0.5.0
 flask-sqlalchemy==2.5.1
 flask-wtf==0.15.1
@@ -14,3 +13,5 @@ pytesseract==0.3.7
 pytest==6.2.4
 python-dotenv==0.17.1
 sklearn==0.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
+
