--- a/code/Dockerfile
+++ b/code/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.8-buster
 RUN apt update
 RUN apt install git
 RUN apt install -y tesseract-ocr
+RUN apt install -y poppler-utils
 
 RUN git clone https://github.com/MSDS698/2021-product-analytics-group-project-group_2_haoma.git /2021-product-analytics-group-project-group_2_haoma
 WORKDIR /2021-product-analytics-group-project-group_2_haoma
