--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,4 @@ pytesseract==0.3.7
 pytest==6.2.4
 python-dotenv==0.17.1
 sklearn==0.0
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
-
+spacy==3.0.6
