--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ pytest==6.2.4
 python-dotenv==0.17.1
 sklearn==0.0
 spacy==3.0.6
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
