--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ flask-login==0.5.0
 flask-sqlalchemy==2.5.1
 flask-wtf==0.15.1
 matplotlib==3.4.2
+openpyxl==3.0.7
 pandas==1.2.4
+plotly==5.0.0
 paramiko==2.7.2
 pdf2image==1.15.1
 pip-chill==1.0.1
@@ -13,4 +15,5 @@ pytesseract==0.3.7
 pytest==6.2.4
 python-dotenv==0.17.1
 sklearn==0.0
+xlrd==2.0.1
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
